# fr3_welding

./: .gitignore  Dockerfile  README.md  setup_docker.sh
fr3_bringup/: CMakeLists.txt  package.xml
fr3_bringup/config/: fr3_welding.rviz
fr3_bringup/launch/: fr3.launch.py
fr3_description/: CMakeLists.txt
fr3_description/launch/: display.launch.xml
fr3_description/meshes/fr3/: tool_link.STL
fr3_description/meshes/welding_components/: Welding_component_4.STL
fr3_description/pointcloud/: weldcomponent.pcd
fr3_description/rviz/: urdf_config.rviz
fr3_description/urdf/: arm.xacro  fr3.ros2_control.xacro  fr3.urdf.xacro  tool.xacro  workpiece.xacro
fr3_weld_executing/: CMakeLists.txt  package.xml
fr3_weld_executing/src/: fr3_weld_executing.cpp
fr3_weld_moveit2_config/: .setup_assistant  CMakeLists.txt
fr3_weld_moveit2_config/config/: fr3.ros2_control.xacro  fr3.srdf  fr3.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
fr3_weld_moveit2_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
install/: local_setup.sh  setup.sh
install/fr3_bringup/share/fr3_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fr3_bringup/share/fr3_bringup/cmake/: fr3_bringupConfig-version.cmake  fr3_bringupConfig.cmake
install/fr3_bringup/share/fr3_bringup/config/: fr3_welding.rviz
install/fr3_bringup/share/fr3_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/fr3_bringup/share/fr3_bringup/launch/: fr3.launch.py
install/fr3_description/share/fr3_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fr3_description/share/fr3_description/cmake/: fr3_descriptionConfig-version.cmake  fr3_descriptionConfig.cmake
install/fr3_description/share/fr3_description/environment/: ament_prefix_path.dsv  path.dsv
install/fr3_description/share/fr3_description/launch/: display.launch.xml
install/fr3_description/share/fr3_description/rviz/: urdf_config.rviz
install/fr3_description/share/fr3_description/urdf/: arm.xacro  fr3.ros2_control.xacro  fr3.urdf.xacro  tool.xacro  workpiece.xacro
install/fr3_weld_executing/include/fr3_weld_executing/: fr3_weld_executing.h
install/fr3_weld_executing/lib/fr3_weld_executing/: fr3_weld_executing
install/fr3_weld_executing/share/fr3_weld_executing/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fr3_weld_executing/share/fr3_weld_executing/cmake/: fr3_weld_executingConfig-version.cmake  fr3_weld_executingConfig.cmake
install/fr3_weld_moveit2_config/share/fr3_weld_moveit2_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/weld_butt_seam_extracting/include/weld_butt_seam_extracting/: weld_butt_seam_extracting_headfile.h
install/weld_butt_seam_extracting/lib/weld_butt_seam_extracting/: weld_butt_seam_extracting_node
install/weld_butt_seam_extracting/share/weld_butt_seam_extracting/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
weld_butt_seam_extracting/: CMakeLists.txt  README.md
weld_butt_seam_extracting/include/weld_butt_seam_extracting/: weld_butt_seam_extracting_headfile.h
weld_butt_seam_extracting/src/: SeamAllIntersectPoint.cpp  SeamCluAllPlane.cpp  SeamCoefficient.cpp  SeamDownSmape.cpp  SeamDownSmapeT.cpp  SeamDrawLine.cpp  SeamEndShow.cpp  SeamFindSelf.cpp  SeamFourPlane.cpp  SeamIntersectLine.cpp  SeamLinkTwo.cpp  SeamRevolve.cpp  SeamSepAllPlane.cpp  SeamTwoPlane.cpp  weld_butt.cpp
(+47 files in other folders)
